examples/BAD/BAD_059_CONSISTENCY/main.nut
Import 'main2.nut'

@ &[Title]
